--- a/src/Cliy/Cliy.csproj
+++ b/src/Cliy/Cliy.csproj
@@ -8,15 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
     <Folder Include="Infra\" />
-    <Folder Include="UI\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Jab" Version="0.6.4" />
     <PackageReference Include="Spectre.Console" Version="0.43.0" />
-    <PackageReference Include="sqlite-net" Version="1.6.292" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta3.22111.2" />
     <PackageReference Include="YamlDotNet" Version="11.2.1" />
   </ItemGroup>
