--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [windows-latest, ubuntu-latest]
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
@@ -19,9 +19,10 @@ jobs:
         uses: actions/setup-dotnet@v2.0.0
         with:
           dotnet-version: 6.0.x
+      - name: Restore
+        run: dotnet restore
       - name: Test
         run: |
-          dotnet test --configuration Debug
           dotnet test --configuration Release
       - name: Pack
         run: dotnet pack src/Cliy.Template.csproj --configuration Release
